--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "spliting text ignoring parts inside quotes, brackets and etc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/dimoff66/split-smartly/issues"
   },
-  "homepage": "https://github.com/dimoff66/split-smartly#readme"
+  "homepage": "https://github.com/dimoff66/split-smartly#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "jest": "^26.4.2"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5"
+  },
+  "jest": {
+    "setupFiles": ["core-js"]
+  }
 }
