--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "split-smartly",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "spliting text ignoring parts inside quotes, brackets and etc",
-  "main": "index.js",
+  "main": "index",
   "scripts": {
     "test": "jest"
   },
