--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
+    "core-js": "^3.6.5",
     "jest": "^26.4.2"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5"
   },
   "jest": {
     "setupFiles": ["core-js"]
